--- a/createuser/createuser.properties
+++ b/createuser/createuser.properties
@@ -2,12 +2,13 @@ jirahost=http://jira.com:8080
 user=user
 password=password
 
-sprint=true
 confhost=http://confluence.com:8080
 
-jira=false
+jira=true
 confluence=true
 debug=false
+simple=false
+file=C:/temp/Users.xlsx
 
 new_confluence_groups=confluence-users,developer
 new_jira_groups=jira-users,developer
