Added check in AD

--- a/createuser/createuser.properties
+++ b/createuser/createuser.properties
@@ -17,3 +17,8 @@ new_user=dadada
 new_name=Da Da
 new_pass=password
 new_email=da.da@spam.com
+
+checkad=true
+bindusername=user
+bindpassword=adpassword
+basedn=dc=ad,dc=global
