--- a/createuser/createuser.properties
+++ b/createuser/createuser.properties
@@ -7,7 +7,7 @@ confhost=http://confluence.com:8080
 jira=true
 confluence=true
 debug=false
-simple=false
+simple=true
 file=C:/temp/Users.xlsx
 
 new_confluence_groups=confluence-users,developer
