Cleanup + move to new client

--- a/cloneissues/cloneissues.properties
+++ b/cloneissues/cloneissues.properties
@@ -1,6 +1,19 @@
-jirahost=https://jira.com
-user=user
-password=password
+jirahost=http://lenovo-yoga:2990/jira
+
+#local uname
+jirauser=admin
+confuser=admin
+#local password
+jirapass=admin
+#local password
+confpass=admin
+#if PAT should be used
+usetoken=false
+
+jiratoken=
+conftoken=
 destinationproject=TEST
-jql=project=TST AND label=test
+jql=project = Demo AND labels = copy
 clonesubtasks=true
+label=theclonelabel
+epic=customfield_10003
