--- a/createuser/createuser.properties
+++ b/createuser/createuser.properties
@@ -1,11 +1,21 @@
-jirahost=http://jira.com:8080
-user=user
-password=password
+jirahost=http://lenovo-yoga:2990/jira
+confhost=http://lenovo-yoga:1990/confluence
 
-confhost=http://confluence.com:8080
+jirauser=admin
+confuser=admin
+#local password
+jirapass=admin
+#local password
+confpass=admin
+#if PAT should be used
+usetoken=true
 
+jiratoken=
+conftoken=
+
+#createuser
 jira=true
-confluence=true
+confluence=false
 debug=false
 simple=true
 file=C:/temp/Users.xlsx
@@ -13,12 +23,12 @@ file=C:/temp/Users.xlsx
 new_confluence_groups=confluence-users,developer
 new_jira_groups=jira-users,developer
 
-new_user=dadada
-new_name=Da Da
-new_pass=password
-new_email=da.da@spam.com
+new_user=dadada3
+new_name=Da Da3
+new_pass=password3
+new_email=da.da3@spam.com
 
-checkad=true
+checkad=false
 bindusername=user
 bindpassword=adpassword
 basedn=dc=ad,dc=global
