Added mod+sum + move to github

--- a/projectgroupconsolidator/projectgroupconsolidator.properties
+++ b/projectgroupconsolidator/projectgroupconsolidator.properties
@@ -1,8 +1,19 @@
-host=https://jira.assaabloy.net
-user=theScriptuser
-password=qwerty
+jirahost=http://lenovo-yoga:2990/jira
+confhost=http://lenovo-yoga:1990/confluence
 
-spacecategory=tools
+jirauser=admin
+confuser=admin
+#local password
+jirapass=admin
+#local password
+confpass=admin
+#if PAT should be used
+usetoken=true
+
+jiratoken=
+conftoken=
+
+archivedwf =Permission Scheme - Standard - Closed Down,Archived Projects - Permission Scheme
 groups=true
 users=true
 file=C:/Tmp/Report.xlsx
