--- a/jira.properties
+++ b/jira.properties
@@ -46,9 +46,7 @@ add=false
 remove=false
 report=true
 #limited=false
-projectcategory=GTT MBS
-#adgroup=G-AAAB-GTT-Group IP Management-sec
-#group=gtt-guest
+projectcategory=Demo
 #groups=true
 #users=true
 #category=Sourcery
