Added Test Issuetype

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 jira-scripts.iml
 jira-scripts.exe
+projectpermissionsreport/projectpermissionsreport.properties
+projectreport/projectreport.properties
